--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -3,13 +3,13 @@
 ###########################
 
 # use 256 term for pretty colors
-set -g default-terminal "screen-256color"
+set -g default-terminal "xterm-256color"
 
 ## update the TERM variable of terminal emulator when creating a new session or attaching a existing session
 set -g update-environment 'DISPLAY SSH_ASKPASS SSH_AGENT_PID SSH_CONNECTION WINDOWID XAUTHORITY TERM'
 
 ## determine if we should enable 256-colour support
-if "[[ ${TERM} =~ 256color || ${TERM} == fbterm ]]" 'set -g default-terminal tmux-256color'
+if "[[ ${TERM} =~ 256color || ${TERM} == fbterm ]]" 'set -g default-terminal xterm-256color'
 
 # increase scroll-back history
 set -g history-limit 10000
