--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -1,12 +1,12 @@
 #bitbucket account
-Host bitbucket.org-stumoss
+Host bitbucket.org
     HostName bitbucket.org
     User git
     IdentityFile ~/.ssh/id_bitbucket
     IdentitiesOnly yes
 
 #github account
-Host github.com-stumoss
+Host github.com
     HostName github.com
     User git
     IdentityFile ~/.ssh/id_github
