--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -101,7 +101,7 @@ set -g status-left-length 40
 set -g status-left '#[fg=green]#S#[fg=blue] #I:#P#[default]'
 
 # show hostname, date, time, and battery in right status bar
-set-option -g status-right '#[fg=green]#H#[default] %d/%m/%y %I:%M'
+set-option -g status-right '#[fg=green]#H#[default] %d/%m/%y %H:%M'
 
 ###########################
 # Colors
