Add new podcasts
* Add "Go Time"
* Add "The Changelog"

--- a/greg/.config/greg/greg.conf
+++ b/greg/.config/greg/greg.conf
@@ -242,7 +242,6 @@ Download directory = ~/Podcasts/No Such Thing As A Fish
 
 downloadhandler = wget --continue {link} -O "{directory}/{date} - {title}.mp3"
 
-
 [The Infinite Monkey Cage]
 
 Download directory = ~/Podcasts/The Infinite Monkey Cage
@@ -252,5 +251,17 @@ downloadhandler = wget --continue {link} -O "{directory}/{date} - {title}.mp3"
 [New Rustacean]
 
 Download directory = ~/Podcasts/New Rustacean
+
+downloadhandler = wget --continue {link} -O "{directory}/{date} - {title}.mp3"
+
+[Go Time]
+
+Download directory = ~/Podcasts/Go Time
+
+downloadhandler = wget --continue {link} -O "{directory}/{date} - {title}.mp3"
+
+[The Changelog]
+
+Download directory = ~/Podcasts/The Changelog
 
 downloadhandler = wget --continue {link} -O "{directory}/{date} - {title}.mp3"
