Optimise greg configuration

--- a/greg/.config/greg/greg.conf
+++ b/greg/.config/greg/greg.conf
@@ -77,14 +77,14 @@ Download directory = ~/Podcasts/
 #   "no" (the feed will be downloaded directly to the download directory)
 #   "yes" (the feed will be downloaded to its own directory)
 
-Create subdirectory = no
+Create subdirectory = yes
 
 # If you choose "yes", you can provide a name for the subdirectory with
 # subdirectory_name. This name can include any of the placeholders described
 # above -- except for {directory} or {fullpath}, of course. For example:
-#
-# subdirectory_name = {podcasttitle}
-#
+
+subdirectory_name = {podcasttitle}
+
 ### Tagging ##################################################################
 #
 # Answering "yes" to the following option will make greg fill out podcast 
@@ -155,7 +155,7 @@ tag_genre = Podcast
 # asks Greg to download every available podcast.
 #
 #
-firstsync = 1
+firstsync = all
 #
 ###############################################################################
 #
@@ -186,7 +186,8 @@ mime = audio
 # The following special case simply instructs greg to download the podcast 
 # itself.
 #
-downloadhandler = greg
+downloadhandler = wget --continue {link} -O "{directory}/{date} - {title}.mp3"
+
 #
 ###############################################################################
 #
@@ -235,33 +236,3 @@ notype = no
 #
 # In the global version of this file (that is, /etc/greg.conf) sections for 
 # individual feeds will not be read.
-#
-[No Such Thing As A Fish]
-
-Download directory = ~/Podcasts/No Such Thing As A Fish
-
-downloadhandler = wget --continue {link} -O "{directory}/{date} - {title}.mp3"
-
-[The Infinite Monkey Cage]
-
-Download directory = ~/Podcasts/The Infinite Monkey Cage
-
-downloadhandler = wget --continue {link} -O "{directory}/{date} - {title}.mp3"
-
-[New Rustacean]
-
-Download directory = ~/Podcasts/New Rustacean
-
-downloadhandler = wget --continue {link} -O "{directory}/{date} - {title}.mp3"
-
-[Go Time]
-
-Download directory = ~/Podcasts/Go Time
-
-downloadhandler = wget --continue {link} -O "{directory}/{date} - {title}.mp3"
-
-[The Changelog]
-
-Download directory = ~/Podcasts/The Changelog
-
-downloadhandler = wget --continue {link} -O "{directory}/{date} - {title}.mp3"
