--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -112,11 +112,8 @@ set -g status-bg colour235
 set -g status-fg white
 
 # highlight current window
-set-window-option -g window-status-current-style fg=black
-set-window-option -g window-status-current-style bg=green
+set-window-option -g window-status-current-style fg=black,bg=green
 
 # set color of active pane
-set -g pane-border-style fg=colour235
 set -g pane-border-style bg=black
-set -g pane-active-border-style fg=green
-set -g pane-active-border-style bg=black
+set -g pane-active-border-style fg=green, bg=black
