--- a/nixpkgs/.config/nixpkgs/overlays/pkgs/alacritty/alacritty.yml
+++ b/nixpkgs/.config/nixpkgs/overlays/pkgs/alacritty/alacritty.yml
@@ -78,7 +78,7 @@ font:
     # style: Italic
 
   # Point size of the font
-  size: 9
+  size: 10
 
   # Offset is the extra space around each character. offset.y can be thought of
   # as modifying the linespacing, and offset.x as modifying the letter spacing.
@@ -99,12 +99,11 @@ font:
   use_thin_strokes: true
 
 # Should display the render timer
-debug:
-  render_timer: false
+render_timer: false
 
 # Use custom cursor colors. If true, display the cursor in the cursor.foreground
 # and cursor.background colors, otherwise invert the colors of the cursor.
-custom_cursor_colors: true
+#custom_cursor_colors: true
 
 # Colors (Monokai Dark)
 colors:
@@ -195,6 +194,8 @@ mouse:
   double_click: { threshold: 300 }
   triple_click: { threshold: 300 }
 
+  hide_when_typing: true
+
   # Faux Scrolling
   #
   # The `faux_scrolling_lines` setting controls the number
@@ -205,22 +206,19 @@ mouse:
   # To disable this completely, set `faux_scrolling_lines` to 0.
   faux_scrolling_lines: 1
 
-  hide_when_typing: true
-
 selection:
   semantic_escape_chars: ",│`|:\"' ()[]{}<>"
 
 dynamic_title: true
 
-hide_cursor_when_typing: false
-
-# Style of the cursor
+# Cursor style
 #
-# Values for 'cursor_style':
-# - Block
-# - Underline
-# - Beam
-cursor_style: Block
+# Values for `style`:
+#   - ▇ Block
+#   - _ Underline
+#   - | Beam
+cursor:
+    style: Block
 
 # Live config reload (changes require restart)
 live_config_reload: true
